# california_real_estate

./: 19372f4f-2ead-4e38-bffb-83dca727e8b0.ipynb  README.md  pyproject.toml  real_estate_price_prediction.ipynb
