[project]
name = "california-real-estate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyspark==3.0.2",
    "pyspark-stubs==3.0.0.post3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
